--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,11 +82,21 @@
         <TextView
             android:id="@+id/TimeText"
             android:layout_width="152dp"
-            android:layout_height="44dp"
+            android:layout_height="34dp"
             android:text="TextView"
             android:textAlignment="center"
-            android:textSize="30sp"
+            android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/continueButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Continuer"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/TimeText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
