--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -133,10 +133,11 @@
         android:id="@+id/divider4"
         android:layout_width="409dp"
         android:layout_height="5dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="52dp"
         android:background="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
