--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
             android:layout_height="43dp"
             android:layout_marginStart="94dp"
             android:layout_marginEnd="96dp"
+            android:progressTint="#8C4CD6"
             app:layout_constraintBottom_toTopOf="@+id/TimeGroup"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -94,6 +95,7 @@
             android:id="@+id/continueButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="#8C4CD6"
             android:text="Continuer"
             android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/TimeText"
