--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -26,7 +26,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
+        android:backgroundTint="#8C4CD6"
         android:text="Démarrer partie personalisée"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -44,6 +46,7 @@
             android:id="@+id/radioButton3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:buttonTint="#8C4CD6"
             android:text="3 bombes"
             android:textColor="#FFFFFF" />
 
@@ -51,6 +54,7 @@
             android:id="@+id/radioButton5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:buttonTint="#8C4CD6"
             android:text="5 bombes"
             android:textColor="#FFFFFF" />
 
@@ -58,6 +62,7 @@
             android:id="@+id/radioButton7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:buttonTint="#8C4CD6"
             android:text="7 bombes"
             android:textColor="#FFFFFF" />
     </RadioGroup>
@@ -75,6 +80,7 @@
             android:id="@+id/radioButton55"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:buttonTint="#8C4CD6"
             android:text="5x5"
             android:textColor="#FFFFFF" />
 
@@ -82,6 +88,7 @@
             android:id="@+id/radioButton66"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:buttonTint="#8C4CD6"
             android:text="6x6"
             android:textColor="#FFFFFF" />
 
@@ -89,6 +96,7 @@
             android:id="@+id/radioButton67"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:buttonTint="#8C4CD6"
             android:text="6x7"
             android:textColor="#FFFFFF" />
     </RadioGroup>
@@ -133,7 +141,7 @@
         android:id="@+id/divider4"
         android:layout_width="409dp"
         android:layout_height="5dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginBottom="20dp"
         android:background="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
@@ -145,7 +153,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
+        android:backgroundTint="#8C4CD6"
         android:text="Facile"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/normalButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -155,7 +165,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
+        android:backgroundTint="#8C4CD6"
         android:text="Normal"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/hardButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -165,7 +177,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
+        android:backgroundTint="#8C4CD6"
         android:text="Difficile"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/divider3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
