--- a/app/src/main/res/layout/fragment_tile.xml
+++ b/app/src/main/res/layout/fragment_tile.xml
@@ -33,6 +33,14 @@
         tools:layout_editor_absoluteY="0dp" />
 
     <ImageView
+        android:id="@+id/boom"
+        android:layout_width="67.5dp"
+        android:layout_height="67.5dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/boom"
+        android:visibility="invisible" />
+
+    <ImageView
         android:id="@+id/imageViewForeground"
         android:layout_width="67.5dp"
         android:layout_height="67.5dp"
@@ -41,4 +49,5 @@
         tools:layout_conversion_absoluteWidth="57dp"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp" />
+
 </FrameLayout>
